--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "jsonwebtoken": "^9.0.2",
+    "socket.io": "^4.8.1",
+    "uuid": "^13.0.0"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "index.ts",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
@@ -18,6 +26,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node index.ts",
     "dev": "nodemon --ext ts,json --exec \"ts-node\" index.ts"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "src/shared/database/users.json"
+    ]
   },
   "keywords": [],
   "author": "maggi",
